1.1.0
-----

* Add OCR capabilities
* Add option to disable OCR for performance reasons
* Let tika handle the supported file formats
* Allow for basic document classification adding metadata to ouput: type of doc, author, creation date, filesize, etc.
* Rewrite metadata handling

1.0.1
-----

* Add Docker support
* Fix path with spaces issue
* Fix sensitivy information patterns and redesign two phase approach
* Add more contextual validations

1.0.0
-----

* Initial release.